[package]
name = "rust-parca-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemalloc_pprof = "0.1.0"
prost = "0.12.4"
prost-types = "0.12.4"
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = { version =  "0.11.0", features = ["prost"] }
